<resources>
    <string name="app_name">Around</string>
    <string name="fb_app_id" translatable="false">1959219304293760</string>
    <string name="error">Error</string>
    <string name="cant_get_data">Can\'t get data from server</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="match_shipper">Finding shipper</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="want_shipping">Want more SHIPPING for less?</string>
    <string name="how_gift_promo">How Gifting Around Work?</string>
    <string name="how_invite">How Invites Work</string>
    <string name="free_promo_code">Free first GIFTING with heart?</string>
    <string name="des_free_promo_code">Join Around launching event and get FREE GIFTING AROUND code</string>
    <string name="ok">OK</string>
    <string name="remind_otp">Please enter the 4 - digit activation code that was sent to the number below</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try again</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pickup_delivery">Pickup &amp; delivery</string>
    <string name="delivery_info">Delivery info</string>
    <string name="gifting">Gifting</string>
    <string name="shipping_fee">Shipping fee</string>
    <string name="item_cost">Item cost</string>
    <string name="service_fee">Service fee</string>
    <string name="return_pickup">Return fee</string>
    <string name="total">Total</string>
    <string name="pickup_location">Pickup location</string>
    <string name="full_order">Full order</string>
    <string name="order_history">History orders</string>
    <string name="phone_number">Phone number</string>
    <string name="cast">Cash</string>
    <string name="online_payment">Online payment</string>
    <string name="required">Required</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="chat">Chat</string>
    <string name="id_no">ID number</string>
    <string name="cannot_data">Can\'t get data from server</string>
    <string name="share">Share to Friends</string>
    <string name="your_invite_code">Your invite code</string>
    <string name="your_gifting_code">Your gifting around code</string>
    <string name="des_want_shipping">Give your friends free ship credit to try Around. You\'ll get 30,000đ off  of your next shipping when they start delivery.</string>
    <string name="chat_shipper">Chat with shipper</string>
    <string name="type_your_message">Type your message</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="distance">Distance</string>
    <string name="new_order">New order</string>
    <string name="payment">Payment</string>
    <string name="call_shipper">Call shipper</string>
    <string name="write_comment">Write comment</string>
    <string name="comments">Comments</string>
    <string name="about_this_item">About this item</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="luxury_perfumes">Luxury - Perfumes</string>
    <string name="input_drop_place">Input drop place</string>
    <string name="buy_more">Buy more</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="start_your_search_here">Search items name here</string>
    <string name="write_to_comment">write your comment</string>
    <string name="payment_methods">Payment methods</string>
    <string name="connecting_to_shipper">Connecting to shipper</string>
    <string name="promo_today">Promo today</string>
    <string name="promotion_code">Promotion code</string>
    <string name="rating">Rating</string>
    <string name="are_you_happy">Are you happy with our service?</string>
    <string name="use_the_slider">Use the slider to tell it in the \n language of Emojis</string>
    <string name="not_really">Not really</string>
    <string name="love_it">Love it</string>
    <string name="because_of">Because of</string>
    <string name="back_to_pickup_location">Back to pickup location</string>
    <string name="item_name">Your item</string>
    <string name="recipient_name">Recipient\'s name</string>
    <string name="contact_phone">Contact phone number</string>
    <string name="log_out">Log out</string>
    <string name="message_logout">Do you want to sign out of the app?</string>
    <string name="access_to_network">Access to Network</string>
    <string name="enable_network">No Internet connection available. Please check your Wifi/3G</string>
    <string name="wifi">Wifi</string>
    <string name="threeg">3G</string>
    <string name="access_to_location">Access to location</string>
    <string name="enable_location">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="order_is_accepted">Order is accepted. Please see in Followjourney stack!!!</string>
    <string name="note">Note</string>
    <string name="shipper_finish">Your %1$s order has been finished. Please check your order history</string>
    <string name="order_cancelled">Shipper canceled your %1$s order. Please check your order history</string>
    <string name="follow_journey">Follow journey</string>
    <string name="to_become_shipper">To become shipper</string>
    <string name="to_become_supplier">To become supplier</string>
    <string name="cancelled">Cancelled</string>
    <string name="finished">Finished</string>
    <string name="processing">Processing</string>
    <string name="scheduled">Scheduled</string>
    <string name="successfully">Successfully</string>
    <string name="minute">min</string>
    <string name="hour">hour</string>
    <string name="empty_cart">Must have at least 1 item in the cart</string>
    <string name="time_minimum">Delivery time must be at least 90 minutes later than now</string>
    <string name="hot">Hot</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="server_key_image_gift">image</string>
    <string name="server_key_name_gift">name</string>
    <string name="empty_follow">Create order to view follow</string>
    <string name="empty_history">Create order to view history</string>
    <string name="pay_on_behaft">Pay on behalf</string>
    <string name="your_item">Your items</string>
    <string name="hint_your_item">laptop, document, food,v.v ...</string>
    <string name="vnd">đ</string>
    <string name="next">Next</string>
    <string name="message_delivery_info_pickup">Please fill in the accurate information to delivery faster</string>
    <string name="min_money">Pay on behalf must be over 200.000 vnd</string>
    <string name="input_otp">Input OTP</string>
    <string name="error_max_fee_online">Your cart value is from %1$s\nPlease select Online payment or Around pay</string>
    <string name="empty_comment">Write comment for this item!</string>
    <string name="view_all_comment">View all comments</string>
    <string name="disconnect_match">We unfortunately could not complete your request. Please try again</string>
    <string name="promotion_value">You got %d%% discount for the next order</string>
    <string name="confirm_payment">Payment inprocessing. Are you sure to exit?</string>
    <string name="promotion_share_notice">Feature is coming soon, please try again later!</string>
    <string name="search_no_result">No matches were found for your keyword</string>
    <string name="attribute_product">Product details</string>
    <string name="shop_name">Shop name</string>
    <string name="all">All</string>
    <string name="price">Price</string>
    <string name="save_1">Saving:</string>
    <string name="read_more">[Read more...]</string>
    <string name="server_key_title">title</string>
    <string name="product_of">Product of:</string>
    <string name="server_key_name_attribute">name_attribute</string>
    <string name="transport">Transport</string>
    <string name="collect">COD</string>
    <string name="purchase">Purchase</string>
    <string name="delete">Delete</string>
    <string name="gift_box">Gift pack</string>
    <string name="drop_location">Drop location</string>
    <string name="total_order_code">Total order cost</string>
    <string name="your_birthday">Your birthday</string>
    <string name="around_payment">Around pay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_1">1st Location</string>
    <string name="place_2">2nd Location</string>
    <string name="place_3">3rd Location</string>
    <string name="quantity">Quantity</string>
    <string name="min_purchase">pay on behalf of at least %1$s vnd</string>
    <string name="max_cod_fee">Pay on behalf must be more than %1$s vnd and less than %2$s vnd</string>
    <string name="cod_message">x1.5 shipping fee to be refund immediately</string>
    <string name="you_are_having">You are having</string>
    <string name="balance">Balance (VND)</string>
    <string name="message_no_around_pay">You don\'t have any Around Pay Credits balance. Top up now to enjoy the convenience of service</string>
    <string name="selected_top_up_value">Select a top up value (VND)</string>
    <string name="invalid_top_up_value">* Invalid Top up value</string>
    <string name="to_up_around_pay">Top up around pay</string>
    <string name="enter_another_value">Enter another value</string>
    <string name="cancel_schedule">Cancel schedule</string>
    <string name="purchase_cost">Pay on behalf</string>
    <string name="enter_location">Enter location</string>
    <string name="location">Location</string>
    <string name="order_id">Order ID</string>
    <string name="your_order_code">Your receipt code</string>
    <string name="top_up">Top up</string>
    <string name="content_comment">Content</string>
    <string name="re_order">Re-order</string>
    <string name="tut_book">tut_book</string>
    <string name="tut_order">tut_order</string>
    <string name="store_name">Store name / brand name</string>
    <string name="store_address">Store address</string>
    <string name="website" translatable="false">Website</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="product_of_cooperation">Product of cooperation</string>
    <string name="forms_of_cooperation">Forms of cooperation</string>
    <string name="product_distribution">Product distribution</string>
    <string name="product_images">Product images</string>
    <string name="no_product_supplier">You have not added product images yet</string>
    <string name="recipient_info">Recipient information</string>
    <string name="notice">Notification</string>
    <string name="personal">Personal</string>
    <string name="event">Event</string>
    <string name="server_key_description">description</string>
    <string name="server_key_image">image</string>
    <string name="server_key_detail">detail</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sale">Sale off</string>
    <string name="send_gift">Send gift</string>
    <string name="send_gift_from_around_pay">Send gift from your Around Pay to</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="min_max_send_gift_around">The minimum amount is %1$s VND, maximum is %2$s VND</string>
    <string name="your_message">Your message</string>
    <string name="max_200">Maximum of 200 characters</string>
    <string name="add_a_message">Add a message (optional)</string>
    <string name="share_1">Share</string>
</resources>