<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="Fragment.Common.RateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/gradient_main">

                <vn.nip.around.Custom.CustomTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontName="OpenSans_Light" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f1f1f1"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/thumb"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_rate_4" />

                <vn.nip.around.Custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/are_you_happy"
                    android:textColor="@color/main"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <vn.nip.around.Custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/use_the_slider"
                    android:textColor="@color/gray_600"
                    android:textSize="11sp"
                    app:fontName="OpenSans_Light" />

                <SeekBar
                    android:id="@+id/seek_bar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:max="4"
                    android:maxHeight="4dp"
                    android:progress="4"
                    android:progressTint="@color/main"
                    android:thumb="@drawable/ic_thumb_seekbar" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp">

                    <vn.nip.around.Custom.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/not_really"
                        android:textColor="@color/gray_600"
                        android:textSize="11sp"
                        app:fontName="OpenSans_Light" />

                    <vn.nip.around.Custom.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:text="@string/love_it"
                        android:textColor="@color/gray_600"
                        android:textSize="11sp"
                        app:fontName="OpenSans_Light" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <vn.nip.around.Custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:text="@string/because_of"
                android:textColor="@color/main"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <vn.nip.around.Custom.CustomButton
                    android:id="@+id/share"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@color/main"
                    android:text="@string/share_1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:fontName="OpenSans_Light" />

                <vn.nip.around.Custom.CustomButton
                    android:id="@+id/confirm"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_button_black"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/gray_900"
                    android:textSize="16sp"
                    app:fontName="OpenSans_Light" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/progress" />


</FrameLayout>
