<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical">


        <vn.nip.around.Custom.CustomTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/remind_otp"
            android:textSize="16sp" />

        <vn.nip.around.Custom.CustomTextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/main"
            android:textSize="20sp"
            app:fontName="OpenSans_SemiBold" />

        <vn.nip.around.Custom.CustomEditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_phone"
            android:hint="@string/input_otp"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textColor="@color/gray_600"
            android:textColorHint="@color/gray_400"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/resend"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_gray">

                <vn.nip.around.Custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:fontName="OpenSans_Light" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_main">

                <vn.nip.around.Custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:fontName="OpenSans_Light" />
            </FrameLayout>

        </LinearLayout>


    </LinearLayout>
</FrameLayout>
